gitops/client/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dbaas-frontend
  labels:
    app.kubernetes.io/part-of: dbaas
