gitops/client/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbaas-frontend
  namespace: dbaas-frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: dbaas-frontend

  template:
    metadata:
      labels:
        app: dbaas-frontend

    spec:
      imagePullSecrets:
        - name: stackit-registry-secret

      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: dbaas-frontend
          image: registry.onstackit.cloud/dbaas-platform/dbaas-frontend:ab66235

          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 20

          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 500m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: dbaas-frontend-svc
  namespace: dbaas-frontend
spec:
  type: ClusterIP
  selector:
    app: dbaas-frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
