gitops/client/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbaas-frontend
  namespace: dbaas-frontend
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - app.foyez.runs.onstackit.cloud
      secretName: dbaas-wildcard-tls

  rules:
    - host: app.foyez.runs.onstackit.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbaas-frontend-svc
                port:
                  number: 3000
